--- a/options.html
+++ b/options.html
@@ -6,16 +6,18 @@
 </head>
 
 <body>
-<div class="login_message" id ="login_message">
-  <p>Para poder usar este complemento, antes debes <b>introducir tu <span style="color:FF3300">CLAVE PÚBLICA</span> de Eskup en las opciones de la extensión</b>. Pincha sobre la imagen e inicia sesión en Eskup para obtener tu clave:</p>
-  <a href="http://eskup.elpais.com/Auth/moduser.html" target="_blank"><img src="img/pasos_previos.png" /></a>
-  <form id="key_form" name="key_form" method="post">
-  <label> Introduce aquí tu clave pública de Eskup:
-  <input type="text" name="key" id="key" />
-  </label>
-  <button id="save">Guardar</button>
-  </form>
-  <div id="status"></div>
-</div>
+<p>Mensajes a mostrar al arrancar la extensión:</p>
+<select>
+  <option>Tablones</option>
+  <option>----</option>
+  <option>Todos</option>
+  <option>Seguidos</option>
+  <option>Propios</option>
+  <option>Privados</option>
+  <option>Favoritos</option>
+  <option>TEMAS</option>
+  <option>----</option>
+</select>
+  
 </body>
 </html>
