--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
 	<link rel="stylesheet" href="css/tree.css" type="text/css" />
+	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/eskup-api-old.js"></script>
@@ -42,11 +43,11 @@
 		<div id="msg-section" class="section-container">
 			<h1>mensajes</h1>
 			<ul class="navigator">
-				<li id="todo">todos</li>
-				<li id="sigo">seguidos</li>
-				<li id="mios">propios</li>
-				<li id="priv">privados</li>
-				<li id="favs">favoritos</li>
+				<li id="sigo" class="board-selector">suscripciones</li>
+				<li id="todo" class="board-selector">todos</li>
+				<li id="mios" class="board-selector">propios</li>
+				<li id="priv" class="board-selector">privados</li>
+				<li id="favs" class="board-selector">favoritos</li>
 			</ul>
 		</div>
 		<!-- SECCION. TEMAS -->
