--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
 		<ul id="header-menu">
 			<li>perfil</li>
 			<li>opciones</li>
-			<li>desconectar</li>
+			<li id="logout">desconectar</li>
 		</ul>
 		<div id="header-user">
 			<img id="user-avatar" />
@@ -76,7 +76,7 @@
 	<!-- SECCION. PERFIL -->
 	<div id="profile-section">
 		<h1 id="profile-section-h1">perfil</h1>
-		<a id="logout" href="#">Cerrar Sesión</a>
+		<a id="logout_" href="#">Cerrar Sesión</a>
 		<div id="mifoto" style="float:left"></div>
 		<div class="profile_item" id="nombre"></div>
 		<div class="profile_item" id="apellidos"></div>
