mejoras en el editor de mensajes

--- a/popup.html
+++ b/popup.html
@@ -106,16 +106,16 @@
 				<div class="cancel" id="cancel"><a href="#">cancelar</a></div>
 			</div>
 			<div id="toolbar">
-				<a id="setbold" class="button fa fa-bold" title="negrita"></a>
-				<a id="setitalic" class="button fa fa-italic" title="cursiva"></a>
-				<a id="insertlink" class="button fa fa-link" title="enlazar esta página"></a>
-				<a id="insertvideo" class="button fa fa-video-camera" title="insertar vídeo"></a>
-				<a id="insertimage" class="button fa fa-camera" title="insertar imagen"></a>
-				<a id="cortas" class="button fa fa-cut" title="acortar enlaces"></a>
+				<button id="setbold" class="button fa fa-bold" title="negrita"></button>
+				<button id="setitalic" class="button fa fa-italic" title="cursiva"></button>
+				<button id="insertlink" class="button fa fa-link" title="enlazar esta página"></button>
+				<button id="insertvideo" class="button fa fa-video-camera" title="insertar vídeo"></button>
+				<button id="insertimage" class="button fa fa-camera" title="insertar imagen"></button>
+				<button id="cortas" class="button fa fa-cut" title="acortar enlaces"></button>
 				<input id="send2fb" type="checkbox" title="facebook" class="fa fa-facebook-square" />
 				<input id="send2tt" type="checkbox" title="twitter" class="fa fa-twitter-square" />
 			</div>
-			<div id="newmessage" contenteditable></div>
+			<div id="newmessage" contenteditable="true"></div>
 			<div id="destinations">
 				<div id="send2priv">privado: </div>
 				<div id="send2theme">tema: </div>
