mejorado el contador de caracteres

--- a/popup.html
+++ b/popup.html
@@ -70,7 +70,7 @@
 
 		<!-- SECCION. EDITOR -->
 		<div id="edit-section">
-			<h1 id="edit-section-h1">escribir nuevo mensaje <span class="fa fa-chevron-up"></span></h1>
+			<h1 id="edit-section-h1"><span class="edit-title">escribir nuevo mensaje</span><span class="fa fa-chevron-up"></span></h1>
 			<div id="editor">
 				<div id="commands">
 					<div id="counter">280</div>
