cambiada la transición de perfil a propuesta de juanje

--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
 		</div>
 	</div><!-- header -->
 
-	<div id="messages-container">
+	<div id="messages-container" class="container">
 		<div id="navigation">
 			<!-- SECCION. MENSAJES -->
 			<div id="msg-section" class="section-container">
@@ -96,7 +96,7 @@
 		</div>
 	</div> <!-- msg-container -->
 
-	<div id="profile-container">
+	<div id="profile-container" class="container">
 		<!-- SECCION. PERFIL -->
 		<div id="profile-section">
 			<div id="profile-info">
