reescrita la función fillThemes

--- a/popup.html
+++ b/popup.html
@@ -83,13 +83,16 @@
 					<button id="insertvideo" class="button fa fa-video-camera" title="insertar vídeo"></button>
 					<button id="insertimage" class="button fa fa-camera" title="insertar imagen"></button>
 					<button id="cortas" class="button fa fa-cut" title="acortar enlaces"></button>
-					<input id="send2fb" type="checkbox" title="facebook" class="fa fa-facebook-square" />
-					<input id="send2tt" type="checkbox" title="twitter" class="fa fa-twitter-square" />
+					
 				</div>
 				<div id="newmessage" contenteditable="true"></div>
 				<div id="destinations">
-					<div id="send2priv">privado: </div>
-					<div id="send2theme">tema: </div>
+					<div id="send2theme" class="send2">TEMAS</div>
+					<div id="send2priv" class="send2">PRIVADO</div>
+					<div id="send2priv" class="send2">REDES
+						<input id="send2fb" type="checkbox" title="facebook" class="fa fa-facebook-square" />
+						<input id="send2tt" type="checkbox" title="twitter" class="fa fa-twitter-square" />
+					</div>
 				</div>
 			</div>
 		</div>
