mejoras en la selección de temas para enviar un mensaje

--- a/popup.html
+++ b/popup.html
@@ -87,7 +87,9 @@
 				</div>
 				<div id="newmessage" contenteditable="true"></div>
 				<div id="destinations">
-					<div id="send2theme" class="send2">TEMAS</div>
+					<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
+						<ul id="send2theme-list"></ul>
+					</div>
 					<div id="send2priv" class="send2">PRIVADO</div>
 					<div id="send2priv" class="send2">REDES
 						<input id="send2fb" type="checkbox" title="facebook" class="fa fa-facebook-square" />
