--- a/popup.html
+++ b/popup.html
@@ -91,9 +91,11 @@
 						<ul id="send2theme-list"></ul>
 					</div>
 					<div id="send2priv" class="send2">PRIVADO</div>
-					<div id="send2priv" class="send2">REDES
-						<input id="send2fb" type="checkbox" title="facebook" class="fa fa-facebook-square" />
-						<input id="send2tt" type="checkbox" title="twitter" class="fa fa-twitter-square" />
+					<div id="send2social" class="send2">REDES
+						<input id="send2fb" name="send2fb" type="checkbox"/>
+						<label for="send2fb" class="facebook fa fa-facebook-square"></label>
+						<input id="send2tt" name="send2tt" type="checkbox"/>
+						<label for="send2tt" class="twitter fa fa-twitter-square"></label>
 					</div>
 				</div>
 			</div>
