contador de caracteres mejorado

--- a/popup.html
+++ b/popup.html
@@ -59,9 +59,10 @@
 					<input name="search" type="text" value="" placeholder="texto a buscar…" size="15" maxlength="25" id="searchtxt_sigo"/>
 					<a type="button" id="search" class ="fa fa-search"></a>
 				</div>
-				<span id="messages-title">
-					Title
-				</span>
+				<div id="board-info">
+					<div id="board-title">Title</div>
+					<div id="board-description">Description</div>
+				</div>
 			</div>
 			<div id="board" class="message-list"></div>
 			<div id="tree-board"><a id="closetree" href="#">volver</a><div id="tree"></div></div>
