--- a/popup.html
+++ b/popup.html
@@ -56,7 +56,7 @@
 		<div id="messages">
 			<div id="messages-header">
 				<div class="search">
-					<input name="search" type="text" value="" placeholder="texto a buscar…" size="15" maxlength="25" id="searchtxt_sigo"/>
+					<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
 					<a type="button" id="search" class ="fa fa-search"></a>
 				</div>
 				<div id="board-info">
