--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,7 @@
 				<div id="board-info">
 					<div id="board-title">Title</div>
 					<div id="board-description">Description</div>
+					<div class="see-more"><span class="fa fa-caret-down"> info</span></div>
 				</div>
 			</div>
 			<div id="board" class="message-list"></div>
@@ -116,11 +117,11 @@
 
 			<div id="follows">
 				<div id="follow-to">
-					<h4>sigo a:</h4>
+					<h4>sigo a: <span class="follow-counter"></span></h4>
 					<div class="follow-to-users" id="follow-to-users"></div>
 				</div>
 				<div id="follow-me">
-					<h4>me siguen:</h4>
+					<h4>me siguen: <span class="follow-counter"></span></h4>
 					<div class="follow-me-users" id="follow-me-users"></div>       
 				</div>
 			</div>
