preparado para send, reply, forward

--- a/popup.html
+++ b/popup.html
@@ -75,7 +75,7 @@
 			<div id="editor">
 				<div id="commands">
 					<div id="counter">280</div>
-					<div class="send" id="send">ENVIAR</div>
+					<div class="send" id="send" data-command="send">ENVIAR</div>
 					<div class="cancel" id="cancel">CANCELAR</div>
 				</div>
 				<div id="toolbar">
