se carga alguna información sobre eventos

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
 	<link rel="stylesheet" href="css/tree.css" type="text/css" />
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.appear.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/eskup-api-old.js"></script>
@@ -60,9 +61,8 @@
 					<a type="button" id="search" class ="fa fa-search"></a>
 				</div>
 				<div id="board-info">
-					<div id="board-title">Title</div>
-					<div id="board-description">Description</div>
-					<div class="see-more"><span class="fa fa-caret-down"> info</span></div>
+					<div id="board-title" class="fa fa-chevron-circle-down"></div>
+					<div id="board-description"></div>
 				</div>
 			</div>
 			<div id="board" class="message-list"></div>
