--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,300' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,300' rel='stylesheet' type='text/css'> -->
+	<!-- <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,700' rel='stylesheet' type='text/css'> -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/eskupext.css" type="text/css" />
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
